--- a/index.html
+++ b/index.html
@@ -61,5 +61,30 @@
     <a href="https://www.frischool.ch/fr/cycle-3/fiches/histoire-11e-livre-de-leleve-0" target="_blank">
         <button class="btn_hg">Histoire 11e</button>
     </a>
+    <p class="sous_titre">Autre :</p>
+    <a href="https://kahoot.it/" target="_blank">
+        <button class="k_q">Kahoot.it</button>
+    </a>
+    <a href="https://quizlet.com/live" target="_blank">
+        <button class="k_q">Quizlet live</button>
+    </a>
+    <a href="https://quizlet.com" target="_blank">
+        <button class="k_q">Quizlet</button>
+    </a>
+    <a href="https://fr.duolingo.com/" target="_blank">
+        <button class="k_q">Duolingo</button>
+    </a>
+    <br>
+    <br>
+    <a href="https://teams.microsoft.com/v2/" target="_blank">
+        <button class="teams">Teams</button>
+    </a>
+    <a href="https://chatgpt.com" target="_blank">
+        <button class="chatgpt">Chat GPT</button>
+    </a>
+    <a href="https://www.mathway.com/fr/Algebra" target="_blank">
+        <button class="res_mat">Résolveur maths</button>
+    </a>
+    <br>
 </body>
 </html>
